--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.5"
 
 services:
   cardano-node:
-    image: inputoutput/cardano-node:1.35.0
+    image: inputoutput/cardano-node:1.35.2
     environment:
       NETWORK:
     volumes:
@@ -20,7 +20,8 @@ services:
     image: inputoutput/cardano-wallet:2022.7.1
     volumes:
       - wallet-${NETWORK}-db:/wallet-db
-      - node-ipc:/ipc
+      - ./ipc:/ipc
+      - ./config:/config
     ports:
       - 8090:8090
     entrypoint: []
